--- a/TRABAJO/css/sobreNosotros.css
+++ b/TRABAJO/css/sobreNosotros.css
@@ -1,21 +1,25 @@
 @import url("estilosComunes.css");
 
-/*PREGUNTAS FRECUENTES  1:22:29*/
+/*PREGUNTAS FRECUENTES*/
+
+/*SOLUCIONARRRRRRR NO SE ESCONDE LA RESPUESTA COÑO*/
 
 .questions {
     text-align: center;
+    color: white;
+    margin-top: 20vh;
 }
 
 .questions__container { 
     display: grid;
     gap: 2em;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .questions__padding { 
     padding: 0;
-    transition: padding .2s;
+    transition: padding .3s;
     border: 1px solid white;
     border-radius: 6px;
 }
@@ -27,22 +31,41 @@
 
 .questions__title {
     display: flex;
+    padding: 30px 0 30px;
+    font-size: 20px;
+    cursor: pointer;
+    justify-content: space-between;
 }
 
 .questions__answer {
-    padding: 30px 0 30px;
-    cursor: pointer;
-    font-size: 20px;
-    color: white;
+    padding: 0 30px 30px;
+    overflow: hidden;
 }
 
 .questions__arrow {
     border-radius: 50%;
-    background-color: blue;
+    background-color: white;
     width: 25px;
     height: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     align-self: flex-end; /*manda la flecha al final*/
+    margin-left: 10px;
+    transition: transform .3s;
+}
+
+.questions__arrow--rotate {
+    transform: rotate(180deg);
+}
+
+.questions__show {
+    text-align: left;
+    height: 0;
+    transition: height .3s;
+}
+
+.questions__i {
+    display: block;
+    color: black;
 }
