--- a/TRABAJO/css/gestionaPropiedad.css
+++ b/TRABAJO/css/gestionaPropiedad.css
@@ -1,1 +1,7 @@
 @import url("estilosComunes.css");
+
+
+    .section-header h2 {
+        margin-top: 20px; /* Ajusta el valor según tus necesidades */
+    }
+
