--- a/TRABAJO/css/calculadora.css
+++ b/TRABAJO/css/calculadora.css
@@ -8,6 +8,11 @@
     #text-calc {
         margin-top: 100px;
     }
+
+    .input-short {
+        max-width: 320px; /* Puedes ajustar el valor según tus necesidades */
+    }
+    
     
 
 
