Squashed commit of the following:
commit f56c7966fc8d8b2baaafe2c29b542a29c636dbd3
Merge: 7485ecf 4ae1aad
Author: Juanmapm23 <125076930+Juanmapm23@users.noreply.github.com>
Date:   Tue May 14 21:06:06 2024 +0200

    Merge branch 'filtro' into developer

commit 7485ecf0c7516c24b5362f2de86fe15dde95604c
Author: AndresSantaella <andressantaella@uma.es>
Date:   Tue May 14 20:50:55 2024 +0200

    Calculadora implementada

commit 4ae1aad405429aa3f53c132e03a0480302aac7e8
Author: Juanmapm23 <125076930+Juanmapm23@users.noreply.github.com>
Date:   Tue May 14 19:07:44 2024 +0200

    detalle piso final

commit b9cfd3870b5d7d543799b18f18f09f71fb1d2055
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Tue May 14 18:20:27 2024 +0200

    Retoque final por miguel

commit 19171ff9be1078196a78a95c41f3f3a05e04d053
Author: Juanmapm23 <125076930+Juanmapm23@users.noreply.github.com>
Date:   Tue May 14 17:14:21 2024 +0200

    Piso mid Update

commit c5eabbe40b6a3a0cfb95d2e2fc557ccd0ff9fe6d
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Tue May 14 14:27:03 2024 +0200

    edición con usabilidad

commit 3a2ae8e375dbb8d953238c7675cba2b268a560cf
Author: AndresSantaella <andressantaella@uma.es>
Date:   Mon May 13 20:31:32 2024 +0200

    Margen superior y "Más información" eliminados

commit 077041b8aee4900d5201d28600148eb185f1422f
Author: AndresSantaella <andressantaella@uma.es>
Date:   Mon May 13 20:11:16 2024 +0200

    Cambios menores

    Texto de calculadora y "Gestiona tu propiedad" por "Vende tu propiedad"

commit b9d0cd27dad3eefce586ccdefa7e6d660ecb271c
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Sat May 11 16:56:11 2024 +0200

    gestiona

    gestiona ok

commit 4e650e773411ca5c59a12c45df63cd8bed47a41d
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Fri May 10 19:00:59 2024 +0200

    r

commit cf2c010ee67e4e08649d26512d35af51f2f09e0b
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Fri May 10 18:51:43 2024 +0200

    retoque

commit 4645526fec1d1df6c8852dc6

--- a/TRABAJO/css/calculadora.css
+++ b/TRABAJO/css/calculadora.css
@@ -1,2 +1,18 @@
 @import url("estilosComunes.css");
 
+    #tipofv {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #text-calc {
+        margin-top: 100px;
+    }
+
+    .input-short {
+        max-width: 320px; /* Puedes ajustar el valor según tus necesidades */
+    }
+    
+    
+
+
