--- a/TRABAJO/css/inicio.css
+++ b/TRABAJO/css/inicio.css
@@ -51,6 +51,9 @@
     margin-top: 12vh;
 }
 
+label{
+    color: white;
+}
 .w-100 {
     height: 100vh;
 }
@@ -60,15 +63,73 @@
     font-size: 50px;
 }
 
+button {
+    background-color: blue;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+  }
+  
+  button:hover {
+    background-color: darkblue;
+  }
 .team .card-body i {
     font-size: 20px;
 }
-
 .card .img-area img {
     width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
     height: 200px; /* Establece una altura fija para todas las imágenes */
     object-fit: cover; /* Hace que la imagen cubra el área designada */
 }
+
+/* Estilos para el contenedor del filtro */
+.filtro-container {
+    background-color: rgba(44, 42, 42, 0.327);
+    padding: 20px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+/* Estilos para el contenido del filtro */
+.filtro-content {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+}
+
+/* Estilos para las etiquetas del filtro */
+.filtro-content label {
+    margin-bottom: 5px;
+}
+
+/* Estilos para los campos de entrada y select del filtro */
+.filtro-content input[type="text"],
+.filtro-content input[type="number"],
+.filtro-content select {
+    width: calc(100% - 10px); /* Resta 10px para compensar el gap entre elementos */
+}
+
+/* Estilos para el botón del filtro */
+.filtro-content button {
+    width: 100%;
+    background-color: blue;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.filtro-content button:hover {
+    background-color: darkblue;
+}
+
+
+
+
+
 
 
 
