--- a/TRABAJO/css/piso.css
+++ b/TRABAJO/css/piso.css
@@ -64,3 +64,17 @@ td {
 .tablaEstilizada th {
     background-color: #f2f2f2; /* Color de fondo de las celdas del encabezado */
 }
+
+.container {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    height: 100vh; /* Establece la altura del contenedor al 100% del viewport */
+}
+
+.text-center {
+    text-align: center; /* Centra horizontalmente el texto */
+}
+
+
+
