--- a/TRABAJO/css/gestionaPropiedad.css
+++ b/TRABAJO/css/gestionaPropiedad.css
@@ -2,6 +2,6 @@
 
 
     .section-header h2 {
-        margin-top: 20px; /* Ajusta el valor según tus necesidades */
+        margin-top: 20px; 
     }
 
