--- a/TRABAJO/css/gestionaPropiedad.css
+++ b/TRABAJO/css/gestionaPropiedad.css
@@ -5,3 +5,34 @@
         margin-top: 20px; 
     }
 
+    #nombre {
+        width: 100vh;
+    }
+    
+    #telefono {
+        width: 50vh;
+    }
+    
+    #correo {
+        width: 50vh; 
+    }
+
+    #invalid-feedback {
+        color: rgb(22, 216, 255);
+    }
+    
+    @media(max-width: 767px) {
+
+        #nombre {
+            width: 100%;
+        }
+
+        #telefono {
+            width: 35vh;
+        }
+        
+        #correo {
+            width: 35vh; 
+        }
+
+    }
