--- a/TRABAJO/css/piso.css
+++ b/TRABAJO/css/piso.css
@@ -65,6 +65,37 @@ td {
     background-color: #f2f2f2; /* Color de fondo de las celdas del encabezado */
 }
 
+.help-icon {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ffc107; /* Cambiado a amarillo */
+    color: white;
+    border-radius: 50%;
+    padding: 20px;
+    height: 60px; /* Altura del círculo */
+    width: 60px; /* Ancho del círculo */
+    cursor: pointer;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+}
+
+    #nombre {
+        width: 100%;
+    }
+
+    #telefono {
+        width: 35vh;
+    }
+    
+    #correo {
+        width: 35vh; 
+    }
+
+
 
 
 
