--- a/css/sobreNosotros.css
+++ b/css/sobreNosotros.css
@@ -1,5 +1,6 @@
 @import url("estilosComunes.css");
 
+
 /* PREGUNTAS FRECUENTES */
 .questions {
     text-align: center;
@@ -7,31 +8,32 @@
     margin-top: 20vh;
 }
 
-.questions__container { 
+.questions__container {
     display: grid;
     gap: 2em;
     padding-top: 50px;
     padding-bottom: 100px;
 }
 
-.questions__padding { 
+.questions__padding {
     padding: 0;
     transition: padding 0.3s;
-    border: 1px solid white;
-    border-radius: 6px;
+    border-radius: 10px; /* Ajuste del borde */
+    box-shadow: 0px 4px 7px rgb(60, 93, 154); /* Sombra */
+    background-color: #343a40; /* Color de fondo */
 }
 
-/* Modificador, se agrega dinámicamente */
 .questions__padding--add {
-    padding-bottom: 0; /* Ajustado a 0 para que solo se expanda con la respuesta */
+    padding-bottom: 0;
 }
 
 .questions__title {
     display: flex;
-    padding: 10px 30px; /* Reducido el padding */
+    padding: 10px 30px;
     font-size: 20px;
     cursor: pointer;
     justify-content: space-between;
+    color: white;
 }
 
 .questions__answer {
@@ -47,7 +49,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    align-self: center; /* Centrar la flecha verticalmente */
+    align-self: center;
     margin-left: 10px;
     transition: transform 0.3s;
 }
@@ -57,7 +59,6 @@
 }
 
 .questions__show {
-    height: 0;
     overflow: hidden;
     transition: height 0.3s ease;
     display: none;
@@ -65,25 +66,20 @@
 }
 
 /* Alineación del texto del párrafo dentro del contenedor de preguntas frecuentes */
-.questions__container p {
+.questions__container p,
+.questions__container ul {
     text-align: left;
     margin: 0 auto;
     max-width: 800px;
     padding: 0 20px;
+    color: white; /* Color del texto */
 }
-
-.questions__container ul{
-    text-align: left;
-    margin: 0 auto;
-    max-width: 800px;
-    padding: 0 20px;
-}
-
 
 .questions__i {
     display: block;
     color: black;
 }
+
 
 
 /* integrantes del grupo */
