--- a/css/gestionaPropiedad.css
+++ b/css/gestionaPropiedad.css
@@ -21,24 +21,66 @@
         color: rgb(22, 216, 255);
     }
 
+    /*BOTÓN AYUDA*/
     .help-icon {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background-color: #ffc107; /* Cambiado a amarillo */
+        background-color: #ffc107;
         color: white;
+        width: 60px;
+        height: 60px;
         border-radius: 50%;
-        padding: 20px;
-        height: 60px; /* Altura del círculo */
-        width: 60px; /* Ancho del círculo */
+        border: none;
+        font-size: 36px;
         cursor: pointer;
-        z-index: 1000;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 24px;
+        position: fixed;
+        top: 130px; /* Ajuste de posición */
+        right: 20px;
+        z-index: 1001;
     }
-    
+
+    /* Estilos del modal */
+    /* Estilos del modal */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: 10% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 90%; /* Ajuste del ancho */
+        max-width: 500px;
+        position: relative;
+    }
+
+    /* Estilos de accesibilidad */
+    .modal-content:focus {
+        outline: none;
+    }
+
+    .modal-close {
+        position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 24px;
+            cursor: pointer;
+            color: red; /* Color rojo */
+            border: none;
+            background-color: transparent;
+            padding: 0;
+            z-index: 1002; /* Asegura que esté encima del botón de ayuda */
+    }
+
+     /* FIN BOTÓN AYUDA*/
+
     @media(max-width: 767px) {
 
         #nombre {
