--- a/css/gestionaPropiedad.css
+++ b/css/gestionaPropiedad.css
@@ -22,65 +22,48 @@
     }
 
     /*BOTÓN AYUDA*/
-    .help-icon {
+    
+    .help-button {
+    
         background-color: #ffc107;
         color: white;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
+        width: 45px;
+        height: 45px;
+        border-radius:50%;
         border: none;
         font-size: 36px;
         cursor: pointer;
-        position: fixed;
-        top: 130px; /* Ajuste de posición */
+        position: absolute;
+        top: 130px;
         right: 20px;
         z-index: 1001;
-    }
-
-    /* Estilos del modal */
-    /* Estilos del modal */
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1000;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 10% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 90%; /* Ajuste del ancho */
-        max-width: 500px;
-        position: relative;
-    }
-
-    /* Estilos de accesibilidad */
-    .modal-content:focus {
-        outline: none;
-    }
-
-   
+        display: flex; /* Hacer que el contenedor sea un flexbox */
+        justify-content: center; /* Centrar horizontalmente el contenido */
+        align-items: center; /* Centrar verticalmente el contenido */
+        
+          }
+        
+          /* Estilo para el icono */
+          .help-icon {
+            font-size: 20px;
+          }
+        
+          
     
-    .contenedor {
-        position: relative; /* El contenedor necesita ser relativo para que el botón se posicione relativo a él */
-    }
-    
-    .close {
-        color: #ff0000;
-        font-size: 28px;
-        font-weight: bold;
-        cursor: pointer;
-        position: absolute; /* Posicionamiento absoluto */
-        top: 10px; /* Ajusta este valor según sea necesario */
-        right: 10px; /* Ajusta este valor para moverlo hacia la derecha */
-    }
+          .help-content {
+            display: none;
+            background-color: #f9f9f9;
+            padding: 10px;
+            position: absolute;
+            top: 120px;
+            right: 70px;
+            border-radius:8px;
+          }
+        
+          /* Estilo para el mensaje cuando estÃ¡ visible */
+          .help-content.active {
+            display: block;
+          }
 
      /* FIN BOTÓN AYUDA*/
 
