--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -86,56 +86,75 @@
     right: 10px; /* Ajusta este valor para moverlo hacia la derecha */
 }
 
- /*BOTÓN AYUDA*/
-    
- .help-button {
-    
+   /*BOTÓN AYUDA*/
+.help-button {
     background-color: #ffc107;
     color: white;
     width: 45px;
     height: 45px;
-    border-radius:50%;
+    border-radius: 50%;
     border: none;
     font-size: 36px;
     cursor: pointer;
-    position: absolute;
-    top: 130px;
-    right: 20px;
+    top: 150px; /* Ajustado para un mejor diseño responsive */
     z-index: 1001;
-    display: flex; /* Hacer que el contenedor sea un flexbox */
-    justify-content: center; /* Centrar horizontalmente el contenido */
-    align-items: center; /* Centrar verticalmente el contenido */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Estilo para el icono */
+.help-icon {
+    font-size: 20px;
+}
+
+.help-content {
+    display: none;
+    background-color: #f9f9f9;
+    padding: 10px;
+    top: 150px; /* Ajustado para un mejor diseño responsive */
+    border-radius: 8px;
+    max-width: 90%; /* Asegura que el contenido no desborde en pantallas pequeñas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Añadido sombra para mejor visibilidad */
+}
+
+/* Estilo para el mensaje cuando está visible */
+.help-content.active {
+    display: block;
+}
+
+
+     /* FIN BOTÓN AYUDA*/
+
+    @media(max-width: 767px) {
+
+        #nombre {
+            width: 100%;
+        }
+
+        #telefono {
+            width: 35vh;
+        }
+        
+        #correo {
+            width: 35vh; 
+        }
+
+        .help-button {
+            width: 35px;
+            height: 35px;
+            font-size: 25px;
+            top: 150px;
+       
+        }
     
-      }
+        .help-icon {
+            font-size: 16px;
+        }
     
-      /* Estilo para el icono */
-      .help-icon {
-        font-size: 20px;
-      }
-    
-      
+        .help-content {
+            top: 150px;
+            font-size: 12px;
+        }
 
-      .help-content {
-        display: none;
-        background-color: #f9f9f9;
-        padding: 10px;
-        position: absolute;
-        top: 120px;
-        right: 70px;
-        border-radius:8px;
-      }
-    
-      /* Estilo para el mensaje cuando estÃ¡ visible */
-      .help-content.active {
-        display: block;
-      }
-
- /* FIN BOTÓN AYUDA*/
-
-
-
- 
-    
-    
-
-
+    }
