--- a/css/gestionaPropiedad.css
+++ b/css/gestionaPropiedad.css
@@ -21,7 +21,7 @@
         color: rgb(22, 216, 255);
     }
 
-   /*BOTÓN AYUDA*/
+ /*BOTÓN AYUDA*/
 .help-button {
     background-color: #ffc107;
     color: white;
@@ -31,7 +31,9 @@
     border: none;
     font-size: 36px;
     cursor: pointer;
-    top: 150px; /* Ajustado para un mejor diseño responsive */
+    position: absolute;
+    right: 80px; /* Ajustado a la derecha */
+    top: 350px; /* Ajustado para un mejor diseño responsive */
     z-index: 1001;
     display: flex;
     justify-content: center;
@@ -47,9 +49,11 @@
     display: none;
     background-color: #f9f9f9;
     padding: 10px;
-    top: 150px; /* Ajustado para un mejor diseño responsive */
+    position: absolute;
+    top: 350px; /* Ajustado para un mejor diseño responsive */
+    right: calc(80px + 45px + 10px); /* Ajustado para que esté al lado del icono */
     border-radius: 8px;
-    max-width: 90%; /* Asegura que el contenido no desborde en pantallas pequeñas */
+    max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeñas */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Añadido sombra para mejor visibilidad */
 }
 
@@ -58,40 +62,38 @@
     display: block;
 }
 
-
-     /* FIN BOTÓN AYUDA*/
-
-    @media(max-width: 767px) {
-
-        #nombre {
-            width: 100%;
-        }
-
-        #telefono {
-            width: 35vh;
-        }
-        
-        #correo {
-            width: 35vh; 
-        }
-
-        .help-button {
-            width: 35px;
-            height: 35px;
-            font-size: 25px;
-            top: 150px;
-          
-        }
-    
-        .help-icon {
-            font-size: 16px;
-        }
-    
-        .help-content {
-            top: 150px;
-            font-size: 12px;
-        }
-
+@media(max-width: 767px) {
+    #nombre {
+        width: 100%;
     }
+
+    #telefono {
+        width: 35vh;
+    }
+    
+    #correo {
+        width: 35vh; 
+    }
+
+    .help-button {
+        width: 35px;
+        height: 35px;
+        font-size: 25px;
+        top: 150px;
+        right: 20px; /* Ajustado a la derecha */
+    }
+
+    .help-icon {
+        font-size: 16px;
+    }
+
+    .help-content {
+        top: 150px;
+        font-size: 12px;
+        right: calc(20px + 35px + 10px); /* Ajustado para que esté al lado del icono */
+    }
+}
+
+
 
     
