--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -10,8 +10,18 @@
     }
 
     .input-short {
-        max-width: 320px;
+        max-width: 200px;
     }
+
+    #years{
+        
+        max-width: 100px;
+    }
+
+    #interest{
+        max-width: 100px;
+    }
+
 
     .card {
         background-color: #343a40; /* Color de fondo */
@@ -105,6 +115,25 @@
     align-items: center;
 }
 
+/*BOTÓN AYUDA*/
+.help-button {
+    background-color: #ffc107;
+    color: white;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: none;
+    font-size: 36px;
+    cursor: pointer;
+    position: absolute;
+    right: 40px; /* Ajustado a la derecha */
+    top: 600px; /* Ajustado para un mejor diseÃ±o responsive */
+    z-index: 1001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Estilo para el icono */
 .help-icon {
     font-size: 20px;
@@ -115,36 +144,25 @@
     background-color: #f9f9f9;
     padding: 10px;
     position: absolute;
-    top: 600px; /* Ajustado para un mejor diseño responsive */
-    right: calc(40px + 45px + 10px); /* Ajustado para que esté al lado del icono */
+    top: 600px; /* Ajustado para un mejor diseÃ±o responsive */
+    right: calc(40px + 45px + 10px); /* Ajustado para que estÃ© al lado del icono */
     border-radius: 8px;
-    max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeñas */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Añadido sombra para mejor visibilidad */
+    max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeÃ±as */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* AÃ±adido sombra para mejor visibilidad */
 }
 
-/* Estilo para el mensaje cuando está visible */
+/* Estilo para el mensaje cuando estÃ¡ visible */
 .help-content.active {
     display: block;
 }
 
 @media(max-width: 767px) {
-    #nombre {
-        width: 100%;
-    }
-
-    #telefono {
-        width: 35vh;
-    }
-    
-    #correo {
-        width: 35vh; 
-    }
 
     .help-button {
         width: 35px;
         height: 35px;
         font-size: 25px;
-        top: 170px;
+        top: 1000px;
         right: 20px; /* Ajustado a la derecha */
     }
 
@@ -153,9 +171,8 @@
     }
 
     .help-content {
-        top: 170px;
+        top: 1000px;
         font-size: 12px;
-        right: calc(20px + 35px + 10px); /* Ajustado para que esté al lado del icono */
+        right: calc(20px + 35px + 10px); /* Ajustado para que estÃ© al lado del icono */
     }
 }
-
