--- a/css/gestionaPropiedad.css
+++ b/css/gestionaPropiedad.css
@@ -10,11 +10,11 @@
     }
     
     #telefono {
-        width: 50vh;
+        width: 200px;
     }
     
     #correo {
-        width: 50vh; 
+        width: 200px; 
     }
 
     #invalid-feedback {
@@ -32,7 +32,7 @@
     font-size: 36px;
     cursor: pointer;
     position: absolute;
-    right: 80px; /* Ajustado a la derecha */
+    right: 140px; /* Ajustado a la derecha */
     top: 350px; /* Ajustado para un mejor diseño responsive */
     z-index: 1001;
     display: flex;
@@ -51,7 +51,7 @@
     padding: 10px;
     position: absolute;
     top: 350px; /* Ajustado para un mejor diseño responsive */
-    right: calc(80px + 45px + 10px); /* Ajustado para que esté al lado del icono */
+    right: calc(140px + 45px + 10px); /* Ajustado para que esté al lado del icono */
     border-radius: 8px;
     max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeñas */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Añadido sombra para mejor visibilidad */
@@ -68,19 +68,19 @@
     }
 
     #telefono {
-        width: 35vh;
+        width: 200px;
     }
     
     #correo {
-        width: 35vh; 
+        width: 200px; 
     }
 
     .help-button {
         width: 35px;
         height: 35px;
         font-size: 25px;
-        top: 150px;
-        right: 20px; /* Ajustado a la derecha */
+        top: 350px;
+        right: 80px; /* Ajustado a la derecha */
     }
 
     .help-icon {
@@ -88,11 +88,15 @@
     }
 
     .help-content {
-        top: 150px;
+        top: 350px;
         font-size: 12px;
-        right: calc(20px + 35px + 10px); /* Ajustado para que esté al lado del icono */
+        right: calc(80px + 35px + 10px); /* Ajustado para que estÃ© al lado del icono */
     }
 }
+
+
+
+    
 
 
 
