--- a/css/inicio.css
+++ b/css/inicio.css
@@ -15,7 +15,6 @@
     width: 100%;
 } 
 
-
 /*para el texto del carrusel*/
 .carousel-caption {
     position: absolute;
@@ -23,8 +22,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-
 }
+
 .carousel-caption h5 {
     font-size: 35px;
     text-transform: uppercase;
@@ -51,24 +50,22 @@
     margin-top: 12vh;
 }
 
-
-
-label{
+label {
     color: white;
 }
+
 .w-100 {
     height: 100vh;
 }
-
 
 .services .card-body i {
     font-size: 50px;
 }
 
- 
 .team .card-body i {
     font-size: 20px;
 }
+
 .card .img-area img {
     width: 100%; /* Ajusta el ancho de la imagen al 100% del contenedor */
     height: 200px; /* Establece una altura fija para todas las imágenes */
@@ -91,15 +88,16 @@ label{
     margin-bottom: 20px;
 }
 
-.filtro-precio{
+.filtro-precio {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-.label-precio{
+
+.label-precio {
     align-items: end;
 }
 
-#guion{
+#guion {
     padding-left: 10px;
 }
 
@@ -147,14 +145,8 @@ label{
     gap: 5px;
 }
 
-
-/*el media sirve para conjunto de estilos que se aplicarán 
-cuando el ancho de la pantalla sea de 767 píxeles o menos. 
-Es común utilizar este tipo de consultas para hacer que un sitio 
-web sea más receptivo y se adapte a diferentes tamaños de pantalla, 
-como los de dispositivos móviles.*/
+/* Media query para dispositivos móviles */
 @media(max-width: 767px) {
-
     .carousel-item {
         height: 70vh;
     }
@@ -185,7 +177,6 @@ como los de dispositivos móviles.*/
         padding: 50px 0;
     }
 
-   
     .filtro-content {
         flex-direction: column;
     }
@@ -213,19 +204,28 @@ como los de dispositivos móviles.*/
         width: auto; 
     }
 
-    .filtrotipo, .filtro-precio label,
+    .filtrotipo,
+    .filtro-precio label,
     .filtro-superficie label {
         width: 30vh;
     }
 
-    .filtroop, .filtroestado, .filtrohab, .filtrobanos {
+    .filtroop,
+    .filtroestado,
+    .filtrohab,
+    .filtrobanos {
         width: 25vh;
     }
 
-    .filtromuni, .filtrodistrito{
+    .filtromuni,
+    .filtrodistrito {
         width: 50vh;
     }
+
+    /* Ajuste para los botones de filtros */
+    .filtro-content button {
+        width: calc(50% - 5px); /* 50% de ancho con un pequeño margen entre ellos */
+        margin-right: 5px;
+        margin-bottom: 10px; /* Separación entre los botones */
+    }
 }
-
-
-
