--- a/css/piso.css
+++ b/css/piso.css
@@ -176,6 +176,8 @@ td {
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 1001;
+        cursor: pointer;
     }
 
     .help-icon {
