--- a/css/piso.css
+++ b/css/piso.css
@@ -167,17 +167,22 @@ td {
     }
 
     .help-button {
-        width: 35px;
-        height: 35px;
-        border-radius: 50%;
-        font-size: 25px;
-        top: 1600px;
-        right: 40px; /* Ajustado a la derecha */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1001;
-        cursor: pointer;
+        
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            font-size: 25px;
+            top: 1600px;
+            right: 40px; /* Ajustado a la derecha */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1001;
+            cursor: pointer;
+            box-sizing: border-box; /* Asegura que el padding y el border se incluyan en el tamaño total del botón */
+            padding: 0; /* Asegura que no haya padding */
+            margin: 0; /* Asegura que no haya margin */
+            border: none; /* Elimina cualquier borde */
     }
 
     .help-icon {
