--- a/css/piso.css
+++ b/css/piso.css
@@ -170,7 +170,7 @@ td {
         
             width: 35px;
             height: 35px;
-            border-radius: 0;
+            border-radius:25%;
             font-size: 25px;
             top: 1600px;
             right: 40px; /* Ajustado a la derecha */
